[gd_scene load_steps=17 format=3 uid="uid://bmoxbqnfk4882"]

[ext_resource type="Script" path="res://scripts/characters/player.gd" id="1_pjn7b"]
[ext_resource type="Resource" uid="uid://b7eg7rwrs8dpe" path="res://scenes/inventory/player_inventory.tres" id="2_pa7g1"]
[ext_resource type="Texture2D" uid="uid://gyh52jtctel1" path="res://assets/book/book.png" id="3_1cwtg"]
[ext_resource type="FontFile" uid="uid://bv4aoa1310txh" path="res://assets/tilemap/BitPap.ttf" id="4_gg0ne"]
[ext_resource type="PackedScene" uid="uid://kil50hlsjxrt" path="res://scenes/inventory/inventory_ui.tscn" id="6_dfsna"]

[sub_resource type="SpriteFrames" id="SpriteFrames_eg8fh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"running",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cyay4"]
radius = 4.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vx1dp"]

[sub_resource type="Animation" id="Animation_2y5yx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_x6v83"]
resource_name = "die"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_nggso"]
resource_name = "idle"
length = 1.00001
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_0le0p"]
resource_name = "move"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_gm5u2"]
resource_name = "shadow"
loop_mode = 1
step = 0.333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [42, 43, 44]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wyos2"]
_data = {
"RESET": SubResource("Animation_2y5yx"),
"die": SubResource("Animation_x6v83"),
"idle": SubResource("Animation_nggso"),
"move": SubResource("Animation_0le0p"),
"shadow": SubResource("Animation_gm5u2")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bs4pp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8a648"]
bg_color = Color(0.576471, 0.164706, 0.623529, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(-8, 0)
collision_mask = 3
script = ExtResource("1_pjn7b")
dash_speed = 200
dash_time = 1.0
dash_cooldown = 0.75
health = 10
inv = ExtResource("2_pa7g1")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_eg8fh")
animation = &"running"
autoplay = "idle"

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_cyay4")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(0.5, 0.5)
collision_layer = 2
collision_mask = 29

[node name="HitboxCollider" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_vx1dp")
debug_color = Color(0.741176, 0.0313726, 0.137255, 0.419608)

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wyos2")
}
autoplay = "idle"

[node name="Book" type="Node2D" parent="."]
visible = false
scale = Vector2(0.65, 0.65)

[node name="BookSprite" type="Sprite2D" parent="Book"]
position = Vector2(11.0769, 3.23077)
texture = ExtResource("3_1cwtg")

[node name="ProjectileSpawnPoint" type="Marker2D" parent="Book"]
position = Vector2(17.7436, -0.769231)

[node name="DashCooldownProgressBar" type="ProgressBar" parent="."]
offset_left = -9.0
offset_top = -14.0
offset_right = 10.0
offset_bottom = -10.0
theme_override_styles/background = SubResource("StyleBoxEmpty_bs4pp")
theme_override_styles/fill = SubResource("StyleBoxFlat_8a648")
max_value = 1.5
show_percentage = false

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="GoldCoins" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -73.0
offset_right = 159.0
offset_bottom = -57.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_gg0ne")
text = "Coins: 0"
horizontal_alignment = 2

[node name="InventoryUI" parent="." instance=ExtResource("6_dfsna")]
offset_left = -31.0
offset_top = -57.0
offset_right = 31.0
offset_bottom = -16.0

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
